# PythonBoilerplate3_13

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: main.py
tests/: tests.py
