[project]
name = "python-boilerplate"
version = "0.1.0"
description = "Python Boilerplate is a starting point for your Python projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "coverage>=7.10.7",
    "flake8>=7.3.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]
